--- a/css/app.css
+++ b/css/app.css
@@ -175,7 +175,10 @@ body {
   transition: all .3s ease-in-out;
 }
 .notifications__actionsList li:hover {
-  background-color: #122034;
+  background-color: #1b3a66;
+}
+.notifications__actionsList li:hover:not(:last-child) a {
+    border-bottom: 1px solid #1b3a66;
 }
 .notifications__actionsList li a {
   display: block;
