--- a/css/app.css
+++ b/css/app.css
@@ -975,10 +975,14 @@ body {
     z-index: 0;
 }
 .document__comments .items .item--attachment .item__inner .caption {
-  position: absolute;
-  bottom: 6px;
-  transition: all .5s ease-in-out;
-  z-index: 1;
+    position: absolute;
+    bottom: 6px;
+    transition: all .5s ease-in-out;
+    z-index: 1;
+    max-height: 60px;
+    display: -webkit-box;
+    -webkit-line-clamp: 3;
+    -webkit-box-orient: vertical;
 }
 .document__comments .items .item--attachment .item__inner:hover:after,
 .document__comments .items .item--attachment .item__inner:hover .caption {
