--- a/css/app.css
+++ b/css/app.css
@@ -980,6 +980,7 @@ body {
     transition: all .5s ease-in-out;
     z-index: 1;
     max-height: 60px;
+    overflow: hidden;
     display: -webkit-box;
     -webkit-line-clamp: 3;
     -webkit-box-orient: vertical;
