--- a/css/app.css
+++ b/css/app.css
@@ -3,6 +3,10 @@ body {
   overflow-x: hidden;
   background-color: #2C5386;
 }
+
+body.fixed {
+  overflow-y: hidden;
+}
 .app {
   position: relative;
   background-color: #F4F4F4;
