--- a/css/app.css
+++ b/css/app.css
@@ -36,25 +36,47 @@ body {
 
 .app.document__comments--visible .document__comments {
   right: 0;
+  box-shadow: 0 -10px 200px rgba(0,0,0,.3);
 }
 .app.document__comments--visible .document__info-data {
   margin-right: 320px;
+  margin-right: 25%;
+}
+.app.document__comments--visible .document__info-data {
+    width: 75%;
 }
 
 .app.document__info--visible .document__info {
-  width: 0;
-  opacity: 0;
+  left: 0;
 }
+.app.document__info--visible .document__info-data {
+    left: 25%;
+    width: 75%;
+}
+
+
+
+.app.document__info--visible.document__comments--visible .document__info-data {
+    width: 50%;
+}
+
+
+
+
+
+
 .app.document__info--visible .document__data {
   width: 100%;
   left: 0;
 }
+
+
+
+
 .add-comment--visible .document__comments .add-comment {
   z-index: 999;
   box-shadow: 0 0 100px rgba(0,0,0,.5);
 }
-
-
 
 
 
@@ -650,19 +672,22 @@ body {
 }
 .document__content {
   position: relative;
-  margin: 0 20px;
   font-size: 0;
 }
 
 .document__info-data {
-  position: relative;
-  margin-bottom: 50px;
-  transition: margin .3s ease-in-out;
+    position: relative;
+    margin-bottom: 50px;
+    transition: margin .3s ease-in-out;
+    width: 100%;
+    left: 0;
+    transition: all .3s ease-in-out;
 }
 .document__info {
   position: relative;
   display: inline-block;
-  width: 300px;
+  width: 25%;
+  left: -25%;
   font-size: 14px;
   float: left;
   transition: width .3s ease-in-out, opacity .3s ease-in-out;
@@ -780,8 +805,7 @@ body {
     background-color: #FFF;
     color: #000;
     font-size: 16px;
-    width: calc(100% - 320px);
-    left: 320px;
+    width: 100%;
     transition: width .3s ease-in-out, left .3s ease-in-out;
     box-shadow: 0 10px 100px rgba(0,0,0,.1);
     border-radius: 5px;
@@ -843,16 +867,16 @@ body {
 .document__comments {
     position: absolute;
     top: 0;
-    right: -320px;
-    width: 300px;
+    right: -25%;
+    width: 25%;
     background-color: #FFF;
-    border-radius: 5px;
+    border-radius: 5px 0 0 5px;
     color: #000;
     font-size: 16px;
     padding: 0;
     margin: 0 0 20px 0;
     transition: right .3s ease-in-out;
-    box-shadow: 0 10px 100px rgba(0,0,0,.1);
+    box-shadow: none;
 }
 .document__comments .tabs .tabs__nav {
   width: 100%;
@@ -1230,35 +1254,4 @@ table tr:last-child td:first-child {
 }
 table tr:last-child td:last-child {
   border-radius: 0 0 5px 0;
-}
-
-
-
-.assistance {
-  position: fixed;
-  bottom: 0;
-  left: 0;
-  background-color: rgba(0, 0, 0, 0.6);
-  color: #FFF;
-  z-index: 999;
-  padding: 20px 30%;
-  text-align: center;
-  font-weight: 300;
-  display: none;
-}
-.assistance.visible {
-  display: block;
-}
-.assistance h3 {
-  font-weight: 400;
-}
-.assistance > i {
-  position: absolute;
-  top: 50%;
-  right: 20px;
-  font-size: 42px;
-  transform: translateY(-50%);
-}
-.assistance--visible .document__steps {
-  z-index: 999999;
 }
