--- a/css/app.css
+++ b/css/app.css
@@ -113,6 +113,7 @@ body.fixed {
   transition: left .3s ease-in-out;
   background-color: #2C5386;
   color: #FFF;
+  overflow-y: auto;
 }
 .app__nav .tabs__panel {
   padding: 10px;
