--- a/css/app.css
+++ b/css/app.css
@@ -880,7 +880,7 @@ body.fixed {
     font-size: 16px;
     padding: 0;
     margin: 0 0 20px 0;
-    transition: right .3s ease-in-out;
+    transition: all .3s ease-in-out;
     box-shadow: none;
 }
 .document__comments .tabs .tabs__nav {
