--- a/css/app.css
+++ b/css/app.css
@@ -99,19 +99,20 @@ body.fixed {
 }
 
 .app__nav__wrapper {
-  position: fixed;
-  z-index: 2;
-  width: 50%;
-  height: 100%;
-  top: 0;
-  left: -50%;
-  transition: all .3s ease-in-out;
-  background-color: transparent;
-  overflow-y: auto;
-
-  color: #FFF;
+    position: fixed;
+    z-index: 2;
+    width: 50%;
+    height: 100%;
+    height: 100vh;
+    top: 0;
+    left: -50%;
+    transition: all .3s ease-in-out;
+    background-color: transparent;
+    overflow: hidden;
+    color: #FFF;
 }
 
+/*
 .app__nav__wrapper::-webkit-scrollbar {
   width: 6px;
 }
@@ -125,25 +126,15 @@ body.fixed {
   box-shadow:
     0 -100vh 0 100vh #ff4f1f;
 }
-.app__nav__wrapper::-moz-scrollbar {
-  width: 6px;
-}
-
-.app__nav__wrapper::-moz-scrollbar-track {
-  overflow: hidden;
-  background-color: #ddd;
-}
-.app__nav__wrapper::-moz-scrollbar-thumb {
-  background-color: #ff4f1f;
-  box-shadow:
-    0 -100vh 0 100vh #ff4f1f;
-}
-
+*/
 
 .app__nav {
-  min-height: 100%;
-  z-index: 5;
-  background-color: #2C5386;
+    min-height: 100%;
+    z-index: 5;
+    background-color: #2C5386;
+    width: calc(100% + 18px);
+    height: 100%;
+    overflow-y: auto;
 }
 .app__nav .tabs__panel {
   padding: 10px;
