--- a/css/app.css
+++ b/css/app.css
@@ -949,6 +949,13 @@ body.fixed {
     margin: 0 0 20px 0;
     transition: all .3s ease-in-out;
 }
+.document__comments .tabs  {
+  height: 90%;
+}
+.document__comments .tabs .tabs__panels {
+  height: inherit;
+  overflow-y: auto;
+}
 .document__comments .tabs .tabs__nav {
   width: 100%;
   margin: 0 0 20px 0;
