added font include

--- a/sass/font-icons.scss
+++ b/sass/font-icons.scss
@@ -3,11 +3,11 @@
 
 @font-face {
 	font-family: 'pmx';
-	src:url('fonts/pmx.eot?8b80t1');
-	src:url('fonts/pmx.eot?8b80t1#iefix') format('embedded-opentype'),
-		url('fonts/pmx.ttf?8b80t1') format('truetype'),
-		url('fonts/pmx.woff?8b80t1') format('woff'),
-		url('fonts/pmx.svg?8b80t1#pmx') format('svg');
+	src:url('../assets/fonts/pmx.eot?8b80t1');
+	src:url('../assets/fonts/pmx.eot?8b80t1#iefix') format('embedded-opentype'),
+		url('../assets/fonts/pmx.ttf?8b80t1') format('truetype'),
+		url('../assets/fonts/pmx.woff?8b80t1') format('woff'),
+		url('../assets/fonts/pmx.svg?8b80t1#pmx') format('svg');
 	font-weight: normal;
 	font-style: normal;
 }
