--- a/_includes/notifications.html
+++ b/_includes/notifications.html
@@ -1,6 +1,6 @@
   <div class="notifications__userInfo">
     <div class="notifications__userInfoAvatar">
-      <img src="img/profile.jpg" alt="profile picture">
+      <img src="assets/images/profile.jpg" alt="profile picture">
     </div>
     <div class="notifications__userInfoName">
       <span class="notifications__userInfoFirstName">Nick</span>
