restructured tabs.js for easier setup. this fixed the problem of the resize in the tabs

--- a/_includes/app-nav.html
+++ b/_includes/app-nav.html
@@ -14,7 +14,7 @@
         <li><a href="#" class="tab__link" tabindex="4"><span>Favorites</span></a></li>
         <li><a href="#" class="tab__link" tabindex="5"><span>Recently used</span></a></li>
       </ul>
-      <div class="tab__more hide">
+      <div class="tab__more">
         <span class="tab__shadow"></span>
         <span class="tab__arrow">⇾</span>
         <span class="tab__counter">9</span>
