--- a/sass/multiSelector.scss
+++ b/sass/multiSelector.scss
@@ -4,16 +4,20 @@
 .multiSelector {
   min-width: 300px;
   width: 50%;
-  z-index: 999;
+  opacity: 0;
+  pointer-events: none;
+  z-index: -1;
+  
+  &--visible {
+    opacity: 1;
+    pointer-events: auto;
+    z-index: 999;
+  }
 
   &--semsearch {
     position: absolute;
     top: 0;
     right: 0;
-
-    opacity: 0;
-    pointer-events: none;
-    z-index: -1;
   }
 
   &__box {
