--- a/sass/multiSelector.scss
+++ b/sass/multiSelector.scss
@@ -7,7 +7,8 @@
   opacity: 0;
   pointer-events: none;
   z-index: -1;
-  
+  transition: opacity .15s ease-in-out;
+
   &--visible {
     opacity: 1;
     pointer-events: auto;
