--- a/sass/old-pmx.scss
+++ b/sass/old-pmx.scss
@@ -16214,11 +16214,11 @@ textarea {
 
 @font-face {
   font-family: 'pmx-icons';
-  src: url('/assets/fonts/pmx.eot');
-  src: url('/assets/fonts/pmx.eot') format("embedded-opentype"),
-    url('/assets/fonts/pmx.ttf') format("truetype"),
-    url('/assets/fonts/pmx.woff') format("woff"),
-    url('/assets/fonts/pmx.svg') format("svg");
+  src: url('../assets/fonts/pmx.eot');
+  src: url('../assets/fonts/pmx.eot') format("embedded-opentype"),
+    url('../assets/fonts/pmx.ttf') format("truetype"),
+    url('../assets/fonts/pmx.woff') format("woff"),
+    url('../assets/fonts/pmx.svg') format("svg");
   font-weight: normal;
   font-style: normal;
 }
